EzBiz to Heroic rename

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="EBiz Funding - business funding verification form"
+      content="Heroic Funding - business funding verification form"
     />
-    <title>EBiz Funding</title>
+    <title>Heroic Funding</title>
     <script type="text/javascript">
       (function (c, l, a, r, i, t, y) {
         c[a] =
